# maniwav

./: .gitignore  README.md  download_data.sh  pyproject.toml
diffusion_policy/dataset/: umi_maniwav_dataset.py
diffusion_policy/model/common/: lr_scheduler.py  noise_aug.py
