[project]
name = "maniwav"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.10,<3.12"
dependencies = [
    "accelerate==0.24",
    "aiofiles==23.2",
    "aiohttp==3.9",
    "atomics==1.0.2",
    "boto3==1.33",
    "dill==0.3.7",
    "einops==0.8.0",
    "fastcrc==0.2",
    "free-mujoco-py==2.1.6",
    "gym==0.23.1",
    "hydra-core==1.3.2",
    "imagecodecs==2023.9.18",
    "ipykernel==6.23",
    "k3d==2.15",
    "lmdb==1.4.*",
    "matplotlib==3.7",
    "numba==0.57",
    "numcodecs==0.11",
    "numpy==1.24",
    "opencv-contrib-python==4.8.1.78",
    "pandas==2.1",
    "plotly>=6.5.2",
    "pyexiftool==0.5",
    "pynput==1.7.7",
    "pyyaml==6.0",
    "ray[default]==2.8.0",
    "robomimic==0.2.0",
    "robosuite",
    "rosbags==0.10.2",
    "scikit-fda==0.9",
    "scikit-video==1.1.*",
    "scipy==1.11",
    "spnav",
    "threadpoolctl==3.2",
    "timm==0.9.7",
    "tqdm==4.65",
    "ur-rtde==1.5.6",
    "v4l2py==2.2",
    "wandb",
    "zarr==2.16",
    "huggingface_hub",
    "setuptools>=68",
    "lerobot @ git+https://github.com/huggingface/lerobot.git@89f59b070368f789a8b3aa558d9f0c88796cc324",
    "diffusers>=0.27.2",
    "orjson>=3.11.9",
    "transformers>=5.9.0",
    "librosa>=0.11.0",
]

[project.optional-dependencies]
cu118 = ["torch", "torchvision", "torchaudio"]
cu128 = ["torch", "torchvision", "torchaudio"]

[tool.uv]
conflicts = [
  [
    { extra = "cu118" },
    { extra = "cu128" },
  ],
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cu118", extra = "cu118" },
  { index = "pytorch-cu128", extra = "cu128" },
]
torchvision = [
  { index = "pytorch-cu118", extra = "cu118" },
  { index = "pytorch-cu128", extra = "cu128" },
]
torchaudio = [
  { index = "pytorch-cu118", extra = "cu118" },
  { index = "pytorch-cu128", extra = "cu128" },
]

[[tool.uv.index]]
name = "pytorch-cu118"
url = "https://download.pytorch.org/whl/cu118"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
